--- a/package.json
+++ b/package.json
@@ -10,8 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/drawer": "^6.6.14",
+    "@react-navigation/elements": "^1.3.26",
+    "@react-navigation/native": "^6.1.16",
+    "@react-navigation/stack": "^6.3.25",
     "react": "18.2.0",
-    "react-native": "0.73.5"
+    "react-native": "^0.73.5",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-image-picker": "^7.1.0",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-swipeable-row": "^0.8.1",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
